--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,7 +23,7 @@ const { title, description, current } = Astro.props
         basic: {
           title: title,
           type: `${current === 'index' ? 'website' : 'article'}`,
-          image: 'https://xxx.com/ogimage.png',
+          image: 'https://demo-drab-one.vercel.app/ogimage.png',
         },
         image: {
           alt: 'Sample Website Design - Powered by Coloso',
