パスの修正

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import about from '../images/index/img-about.png'
                 「最初にトライしてみよう」という挑戦心と推進力を持って、企業と共に歩みます。
                 未来のゲームチェンジャーの「最初にトライしてみよう」を実現する』ことが、創業以来、すべてのサービスを継続的に発展させてきた原動力です。インターネットやスマートフォンの普及により、環境は日々変化しています。現状を維持し続けるだけでは、企業は衰退してしまいます。新しいことに挑戦しなければ、革新的なビジネスは生まれません。2020年代以降、低成長が続いた日本の経済を打破したいという強い想いから、「最初にトライしてみよう」という挑戦心と推進力を持って、ビッグデータとアルゴリズムの領域で企業と共に歩み、効率化や問題解決を追求したシステムの開拓により、社会の革新を支援します。
               </p>
-              <p><AnchorButton type="outline" href="#">詳しく見る</AnchorButton></p>
+              <p><AnchorButton type="outline" href="/company">詳しく見る</AnchorButton></p>
             </MediaSidebar>
           </Center>
         </SeparateCover>
